test/corpus/comments.txt
==============
Line comments
==============

Print;
~~ Hello
~~Hi

---

(source_file
  (statement
    (identifier))
  (line_comment)
  (line_comment))

===============
Inline comments
===============

Print line 1;

---

(source_file
  (statement
    (identifier)
    (inline_comment)
    (number)))

==================
Multiline comments
==================

Print;
~a
~

Print ~ abc
~

~
comment
~~ with line comment in between
1 ~~ and another
~

---

(source_file
  (statement
    (identifier))
  (multiline_comment)
  (statement
    (identifier))
  (multiline_comment)
  (multiline_comment)
  (multiline_comment)
  (multiline_comment))

==============
Error comments
==============

Print;
~~ hi ~ A
B
C
~

---

(source_file
  (statement
    (identifier))
  (line_comment)
  (statement
    (identifier)
    (identifier))
  (ERROR
    (UNEXPECTED '\0')))
